--- a/howToBuy.html
+++ b/howToBuy.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>cookies</title>
+	<title>Cookies - How to Buy</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
 	 crossorigin="anonymous">
 	<link href="style.css" rel="stylesheet" type="text/css" />
@@ -60,7 +60,7 @@
         <li class="list-group-item">WhitePaper</li>
         <li class="list-group-item"><a href="https://poocoin.app/tokens/0xa12c298f30a8f143eab6bef26076dcc8c23f8c4c">Chart</a></li>
         <li class="list-group-item"><a href="#roadmap">Road Map</a></li>
-        <li class="list-group-item"><a href="/howToBuy.html">How to Buy</a></li>
+        <li class="list-group-item">How to Buy</li>
       </ul>
     </div>
     
@@ -72,7 +72,7 @@
     <br>
 
     <div style="padding-top: 10%;" class="container">
-      <h1 style="color: white; padding: 5px; text-align: center; font-family: LM, Sans-Serif;" class="display-4">COOKIES</h1>
+      <h1 style="color: white; padding: 5px; text-align: center; font-family: LM;" class="display-4">COOKIES</h1>
       <br>
       <br>
       <h6 id="address" style="color: white; text-align: center; font-family:playfair;">0xa12c298F30a8f143eaB6bef26076dcC8C23f8C4c</h6>
