--- a/howToBuy.html
+++ b/howToBuy.html
@@ -85,7 +85,7 @@
         <div style="display: flex; align-items:center;">
           <div style="width:40vw; max-width: 40vw;">
             <p>
-              Trust wallet can connect to pancake swap which is what we will need to do
+              Trust wallet can connect to pancake swap which is 
             </p>
           </div>
           <div style="display: flex; flex-direction: column;">
