--- a/howToBuy.html
+++ b/howToBuy.html
@@ -44,8 +44,8 @@
     <div class="mx-auto order-0">
 
     </div>
-      <a class="navbar-brand" href="#">
-        <h5 class="d-none d-md-block" style="color:white;">Cookies Token</h5>  
+      <a class="navbar-brand" href="/index.html">
+        <h5 class="d-none d-md-block" style="color:white;">Cookies Token</h5>
         <h6 class="d-block d-md-none" style="color:white; ">Cookies</h6>  
         <a class="navbar-brand order-5" href="/index.html">
           <img id="logo" width="30" height="30" src="imgs/cookiesLogo.png" class="d-inline-block align-top" alt="">
@@ -170,7 +170,7 @@
           <br>Click add and then Cookies will be added to your PancakeSwap menu. Select BSC in the 'From' section and enter the desired exchange amount. You will have to set your slippage to 10% in the exchange settings before swapping. (If an error occurs, change slippage to 11%, and if you get an error again, try 12%, and so on)
         </h3>
         <p style="font-familty: playfair;" class="subItem d-block d-md-none">
-          Go to the DApps browser tab in the Trust wallet app (it should just be labeled 'Browser') and then open PancakeSwap. You then have to click 'Select a currency' in the 'To' section of the exchange and paste the address'0xa12c298F30a8f143eaB6bef26076dcC8C23f8C4c'. 
+          Go to the DApps browser tab in the Trust wallet app (it should just be labeled 'Browser') and then open PancakeSwap. You then have to click 'Select a currency' in the 'To' section of the exchange and paste the address, '0xa12c298F30a8f143eaB6bef26076dcC8C23f8C4c'. 
           Click add and then Cookies will be added to your PancakeSwap menu. Select BSC in the 'From' section and enter the desired exchange amount. You will have to set your slippage to 10% in the exchange settings before swapping. (If an error occurs, change slippage to 11%, and if you get an error again, try 12%, and so on)
         </p>
         <br><br><br><br><br>
@@ -197,7 +197,7 @@
     <br>
     <br>
     <br>
-    </div>
+  </div>
 
 <!-- waves divider ---------------------------------------------------------------------------------->
 
