--- a/howToBuy.html
+++ b/howToBuy.html
@@ -172,9 +172,8 @@
         <p style="font-familty: playfair;" class="subItem d-block d-md-none">
           Go to the DApps browser tab in the Trust wallet app (it should just be labeled 'Browser') and then open PancakeSwap. You then have to click 'Select a currency' in the 'To' section of the exchange and paste the address<br> 
           
-          <p class="d-none d-md-block"   style=" font-size: 0.6em; color: white; text-align: center; font-family:playfair;"><span id="address">0xa12c298F30a8f143eaB6bef26076dcC8C23f8C4c</span><i id="copy_address_button"style="cursor: pointer; margin-left: 10px; font-size: 1.2em;" class="material-icons">content_copy</i></p>
+          <p class="d-block d-md-none" style=" font-size: 0.6em; color: white; text-align: center; font-family:playfair;"><span id="address">0xa12c298F30a8f143eaB6bef26076dcC8C23f8C4c</span></p>
           
-          <br>Click add and then Cookies will be added to your PancakeSwap menu. Select BSC in the 'From' section and enter the desired exchange amount. You will have to set your slippage to 10% in the exchange settings before swapping. (If an error occurs, change slippage to 11%, and if you get an error again, try 12%, and so on)
         </p>
         <br><br><br><br><br>
     </div>
@@ -193,8 +192,8 @@
         <h3 class="display-6 subItem d-none d-md-block">
           Go to the Trust wallet home screen and click on the top right settings icon. Scroll all the way to the bottom and click on 'Add Custom Token'. Set the network to Smart Chain and then copy and paste the address, '0xa12c298F30a8f143eaB6bef26076dcC8C23f8C4c', into the Contract Address field. Set the name and symbol to 'Cookies'. Finally set the Decimals to 9 and click 'Save' and you are finished.
         </h3>
-        <p style="font-familty: playfair;" class="subItem d-block d-md-none">
-          Go to the Trust wallet home screen and click on the top right settings icon. Scroll all the way to the bottom and click on 'Add Custom Token'. Set the network to Smart Chain and then copy and paste the address, '0xa12c298F30a8f143eaB6bef26076dcC8C23f8C4c', into the Contract Address field. Set the name and symbol to 'Cookies'. Finally set the Decimals to 9 and click 'Save' and you are finished.
+        <p style="font-familty: playfair; font-size: 0.8em;" class="subItem d-block d-md-none">
+          Go to the Trust wallet home screen and click on the top right settings icon. Scroll all the way to the bottom and click on 'Add Custom Token'. Set the network to Smart Chain and then copy and paste the address,<br>'0xa12c298F30a8f143eaB6bef26076dcC8C23f8C4c'<br>, into the Contract Address field. Set the name and symbol to 'Cookies'. Finally set the Decimals to 9 and click 'Save' and you are finished.
         </p>
     </div>
     <br>
