--- a/index.html
+++ b/index.html
@@ -415,7 +415,8 @@
                   <li>
                       <h3>Liquidity Lock</h3>
                       <p>A liquidity lock protects investors as well as providing liquity to the market</p>
-                      <a class="btn btn-primary" style="padding: 5px;" target="_blank" href="https://deeplock.io/lock/0xa12c298F30a8f143eaB6bef26076dcC8C23f8C4c"> view liquity lock </a>
+                      <a class="d-block d-md-none btn btn-primary" style="padding: 5px; font-size: 0.4em;" target="_blank" href="https://deeplock.io/lock/0xa12c298F30a8f143eaB6bef26076dcC8C23f8C4c"> view liquity lock </a>
+                      <a class="d-none d-md-block btn btn-primary" style="padding: 5px;" target="_blank" href="https://deeplock.io/lock/0xa12c298F30a8f143eaB6bef26076dcC8C23f8C4c"> view liquity lock </a>
                   </li>
                   <li>
                       <div>
