--- a/howToBuy.html
+++ b/howToBuy.html
@@ -311,6 +311,12 @@
       <img id="monster" width="75" height="75" src="imgs/cookiesLogo.png">
 
 <!-- waves divider ---------------------------------------------------------------------------------->
+        <div style="color:black; border-top: 1px solid white; width: 100%;">
+        <div style="display: flex; justify-content: center;">
+          <p style="margin-right: 5px;">website devloped by:</p>
+          <a href="https://www.howardandgoldstein.com/"><p>H&G</p></a>
+        </div>
+      </div>
 
     <script src="script.js">
 	</script>
