--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
       <br><br><br><br>
       <div style="color:black; border-top: 1px solid white; width: 100%;">
         <div style="display: flex; justify-content: center;">
-          <p style="margin-right: 5px;">website devloped by:</p>
+          <p style="margin-right: 5px;">website developed by:</p>
           <a href="https://www.howardandgoldstein.com/"><p>H&G</p></a>
         </div>
       </div>
