spelling and grammer

--- a/index.html
+++ b/index.html
@@ -141,16 +141,16 @@
             4% of every transaction is burned to provide value to the holders, as well as 2% provided to the liquidity pool
           </li>
           <li class="list-group-item">
-            4% of every transaction is automatically redistrubited to all holders as a defi reward
+            4% of every transaction is automatically redistributed to all holders as a DEFI reward
           </li>
           <li class="list-group-item">
-            Cookie Token plans to donate more than 100k in Q2 of 2021 to a charity of the communities choosing with plans to donate more in the future
+            The Cookies team plans to donate more than 100k in Q2 of 2021 to a charity of the community's choosing. As well as scheduling regular community donations in the future.
           </li>
         </ul>
         <br>
       </div>
       <br><br><br><br><br>
-      <div style="margin-bottom: 20px;"class="jumbotron d-none d-md-flex">
+      <div style="margin-bottom: 20px; flex-direction:column;"class="jumbotron d-none d-md-flex">
         <ul class="list-group list-group-horizontal ">
           <li class="list-group-item">
             <h5>Scarce Token Supply</h5>
@@ -192,18 +192,20 @@
 
           </li>
         </ul>
-      </div>
-      <div style="margin-bottom: 20px;"class="jumbotron d-none d-md-flex">
+        <br>
         <ul class="list-group list-group-horizontal">
           <li class="list-group-item">
-            Smaller initial supply means individual token means lower supply which leads to higher token values
+            <p>Smaller initial supply which leads to higher token values</p>
           </li>
           <li class="list-group-item">
-            Earn an extra 2% dividends by staking on cookies on pancake swap
+            <p>Earn 2% more cookies by staking on pancake swap</p>
           </li>
           <li class="list-group-item">
           </li>
         </ul>
+      </div>
+      <div style="margin-bottom: 20px;"class="jumbotron d-none d-md-flex">
+
         <br>
       </div>
 
@@ -250,7 +252,7 @@
           
           </li>
           <li style="color:white; background-color: #0F0F0F;" class="list-group-item">
-            <p>4% of every transaction is automatically redistrubited to all holders as a defi reward. This means that total supply decresses while holder supply increases.</P
+            <p>4% of every transaction is automatically redistributed to all holders as a DEFI reward</P
           </li>
           <hr style="color:white;">
           <li style="background-color: #0F0F0F;" class="list-group-item vertical_space"> 
@@ -258,7 +260,7 @@
             <center><img height="350" src="imgs/cookieJar.png"/></center>
           </li>
           <li style="background-color: #0F0F0F;" class="list-group-item">
-            <p>Cookie Token plans to donate more than 100k in Q2 of 2021 to a charity of the communities choosing with plans to donate more in the future</P>
+            <p>The Cookies team plans to donate more than 100k in Q2 of 2021 to a charity of the community's choosing. As well as scheduling regular community donations in the future.</P>
           </li>
           <hr style="color:white;">
           <li style="background-color: #0F0F0F;" class="list-group-item vertical_space"> 
@@ -293,7 +295,7 @@
             </div>          
           </li>
           <li style="color:whtie;" class="list-group-item">
-            <p>Earn an extra 2% dividends by staking on cookies on pancake swap</p>
+            <p>Earn 2% more cookies by staking on pancake swap</p>
           </li>
           <hr style="color:white;">
           <li style="color:whtie;" class="list-group-item">            
@@ -301,7 +303,7 @@
             <img class="img-fluid" src="imgs/barChart.png"/>
           </li>
           <li class="list-group-item">
-            <p>Smaller initial supply means individual token means lower supply which leads to higher token values</p>
+            <p>Smaller initial supply which leads to higher token values</p>
           </li>
         </ul>
       </div>
@@ -413,15 +415,15 @@
           <div class="timeline">
               <ul>
                   <li>
-                      <h3>Liquidity Lock</h3>
-                      <p>A liquidity lock protects investors as well as providing liquity to the market</p>
-                      <a class="d-block d-md-none btn btn-primary" style="padding: 5px; font-size: 0.4em;" target="_blank" href="https://deeplock.io/lock/0xa12c298F30a8f143eaB6bef26076dcC8C23f8C4c"> view liquity lock </a>
-                      <a class="d-none d-md-block btn btn-primary" style="padding: 5px;" target="_blank" href="https://deeplock.io/lock/0xa12c298F30a8f143eaB6bef26076dcC8C23f8C4c"> view liquity lock </a>
+                      <h3>liquidity Lock</h3>
+                      <p>A liquidity lock means an even smaller circulating supply</p>
+                      <a class="d-block d-md-none btn btn-primary" style="padding: 5px; font-size: 0.4em;" target="_blank" href="https://deeplock.io/lock/0xa12c298F30a8f143eaB6bef26076dcC8C23f8C4c"> view liquidity lock </a>
+                      <a class="d-none d-md-block btn btn-primary" style="padding: 5px;" target="_blank" href="https://deeplock.io/lock/0xa12c298F30a8f143eaB6bef26076dcC8C23f8C4c"> view liquidity lock </a>
                   </li>
                   <li>
                       <div>
-                          <h3>Build a devloper Community</h3>
-                          <p>Hire devlopers to extend the Cookies ecosystem</p>
+                          <h3>Build a developer Community</h3>
+                          <p>Hire developers to extend the Cookies ecosystem</p>
                       </div>
 
                   </li>
@@ -437,11 +439,11 @@
                   </li>
                   <li>
                     <h3>List Cookies on Coin Gecko and CMC</h3>
-                    <p>These listings will allow users to have more easily excessable price data as well as establishing pressence in the crypto space</p>
+                    <p>These listings will allow users to have easily accessible price data as well as establishing a presence in the crypto space</p>
                   </li>
                   <li>
-                    <h3>Cex exchange listing</h3>
-                    <p>Being listed on a Cex exchange will make it easier to buy cookies which will further grow the community<</p>
+                    <h3>CEX exchange listing</h3>
+                    <p>Being listed on the CEX exchange will accelerate the cookies buying process which means an influx of new cookies holders</p>
                   </li>
                   <div style="clear:both;"></div>
               </ul>
@@ -462,19 +464,19 @@
         <ul>
           <li>
             <h3>Celebrity Endorsements</h3>
-            <p>During this quarter we will look to grow our community through celebrity endorsements</p>
+            <p>During this financial quarter, cookies hopes to grow our community through celebrity endorsement</p>
           </li>
           <li>
             <h3>Regular Donations</h3>
-            <p>Donations will have a regular schedule and will work</p>
+            <p>Cookies will begin making regular community-driven donations</p>
           </li>
           <li>
-            <h3>new defi projects</h3>
-            <p>The cookies enviroment will begin to expand with the launch of new cookie based defi products</p>
+            <h3>new defi products</h3>
+            <p>The cookies environment will begin to expand with the launch of new cookie-based defi products</p>
           </li>
           <li>
             <h3>new Exchange listings</h3>
-            <p>Cookies will begin to be listed on more exchanges</p>
+            <p>Cookies token hopes to expand its reach by being listed on major exchangess</p>
           </li>
           <div style="clear:both;"></div>
         </ul>
@@ -490,8 +492,8 @@
       <div class="timeline">
         <ul>
           <li>
-            <h3>Finishing of wallet and defi marketplace</h3>
-            <p>The wallet and defi marketplace will allow users to easily interact with defi products as well bringing in developers</p>
+            <h3>Launch of the official cookies wallet and the defi product marketplace</h3>
+            <p>The wallet and defi marketplace will allow users to easily interact with the expanding cookies ecosystem as attracting new developers to the project.</p>
           </li>
           <li>
             <h3>More to come Soon</h3>
