linked to whitepaper

--- a/howToBuy.html
+++ b/howToBuy.html
@@ -35,7 +35,7 @@
       <a  href="https://twitter.com/CookiesToken"><img width="30" height="30" src="imgs/twitter_logo.png"/></a>
       <a  href="https://t.me/OfficialCookiesToken"><img width="30" height="30" src="imgs/telegram.png"/></a>
       <div class="d-none d-lg-inline">
-        <a style="margin-left: 30px;" class="top-link" href="#">WhitePaper</a>
+        <a style="margin-left: 30px;" class="top-link" href="whitepaper.pdf">WhitePaper</a>
         <a  class="top-link" href="https://charts.bogged.finance/?token=0xa12c298F30a8f143eaB6bef26076dcC8C23f8C4c">Chart</a>
         <a  class="top-link" href="#roadmap">Road Map</a>
         <a  class="top-link" href="/howToBuy.html">How to Buy</a>
@@ -67,7 +67,7 @@
       </div>
       <ul style="z-index:100000; background-color: #0F0F0F; height:40vh; width:100vh; color:white;" class="list-group">
 
-        <li class="list-group-item">WhitePaper</li>
+        <li class="list-group-item"><a href="whitepaper.pdf">WhitePaper</a></li>
         <li class="list-group-item"><a href="https://charts.bogged.finance/?token=0xa12c298F30a8f143eaB6bef26076dcC8C23f8C4c">Chart</a></li>
         <li class="list-group-item"><a href="/index.html#roadmap">Road Map</a></li>
         <li class="list-group-item"><a href="/howToBuy.html">How to Buy</a></li>
